# rust-dev-journey

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SUMMARY.md  deny.toml  release.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deny.yml
docs/: index.md  style-guide.md
docs/architecture/: adr-0000-template.md  adr-0001-cargo-workspaces.md  adr-0002-error-handling-policy.md  adr-0003-logging-and-tracing.md
examples/00_hello_borrowing/: Cargo.toml
examples/00_hello_borrowing/src/: main.rs
examples/01_results_options/: Cargo.toml
examples/02_traits_generics/: Cargo.toml
examples/03_async_basics/: Cargo.toml
examples/04_testing_tracing/: Cargo.toml
examples/ex_async_basics/: Cargo.toml
examples/ex_async_basics/src/: main.rs
examples/ex_hello_borrowing/: Cargo.toml
examples/ex_results_options/: Cargo.toml
examples/ex_results_options/src/: main.rs
examples/ex_testing_tracing/: Cargo.toml
examples/ex_testing_tracing/src/: main.rs
examples/ex_traits_generics/: Cargo.toml
examples/ex_traits_generics/src/: main.rs
projects/audit-log-service/: Cargo.toml  Dockerfile  README.md
projects/audit-log-service/src/: main.rs
projects/audit-log-service/tests/: integration.rs
projects/azure-agent/: Cargo.toml  README.md
projects/azure-agent/src/: main.rs
projects/cli-data-validator/: Cargo.toml  README.md
projects/cli-data-validator/src/: main.rs
projects/event-ingestor/: Cargo.toml  README.md
projects/event-ingestor/src/: main.rs
projects/hello_cargo/: Cargo.toml
projects/hello_world/: main
scripts/: README.md
