
[workspace]
members = [
  "examples/00_hello_borrowing",
  "examples/01_results_options",
  "examples/02_traits_generics",
  "examples/03_async_basics",
  "examples/04_testing_tracing",
  "projects/audit-log-service",
  "projects/cli-data-validator",
  "projects/event-ingestor",
  "projects/azure-agent"
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Paul Denlinger <you@example.com>"]
