[workspace]
members = ["projects/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"                     # <-- This line is required for version inheritance
license = "MIT"
authors = ["Paul Denlinger <pmdenlinger@icloud.com>"]
repository = "https://github.com/pmdenlinger/rust-dev-journey"
homepage = "https://github.com/pmdenlinger/rust-dev-journey"
description = "Rust dev journey workspace"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"